[tool.poetry]
name = "binanceapi"
version = "0.1.0"
description = ""
authors = ["Duru Ifeanyi <kersyduru@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.3"
Flask = "^3.0.0"
urllib3 = "2.1.0"
poetry = "1.7.1"
python_binance = "1.0.19"
pandas = "^2.1.4"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
